--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,11 +35,31 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/PBO2_2310010388
 endorsed.classpath=
 excludes=
+file.reference.commons-beanutils-1.9.4.jar=C:\\Users\\Lenovo\\Downloads\\Library Ireport (1)\\Library Ireport\\commons-beanutils-1.9.4.jar
+file.reference.commons-collections-3.2.1-1.0.0.jar=C:\\Users\\Lenovo\\Downloads\\Library Ireport (1)\\Library Ireport\\commons-collections-3.2.1-1.0.0.jar
+file.reference.commons-digester-2.1.jar=C:\\Users\\Lenovo\\Downloads\\Library Ireport (1)\\Library Ireport\\commons-digester-2.1.jar
+file.reference.commons-digester3-3.2.jar=C:\\Users\\Lenovo\\Downloads\\Library Ireport (1)\\Library Ireport\\commons-digester3-3.2.jar
+file.reference.commons-javaflow-1209105.jar=C:\\Users\\Lenovo\\Downloads\\Library Ireport (1)\\Library Ireport\\commons-javaflow-1209105.jar
+file.reference.commons-logging-1.2.jar=C:\\Users\\Lenovo\\Downloads\\Library Ireport (1)\\Library Ireport\\commons-logging-1.2.jar
+file.reference.groovy-all-2.4.15.jar=C:\\Users\\Lenovo\\Downloads\\Library Ireport (1)\\Library Ireport\\groovy-all-2.4.15.jar
+file.reference.itext-2.1.7.js2.jar=C:\\Users\\Lenovo\\Downloads\\Library Ireport (1)\\Library Ireport\\itext-2.1.7.js2.jar
+file.reference.jasperreports-5.6.0.jar=C:\\Users\\Lenovo\\Downloads\\Library Ireport (1)\\Library Ireport\\jasperreports-5.6.0.jar
 file.reference.mysql-connector-j-8.0.33.jar=C:\\Users\\Lenovo\\Documents\\New folder\\mysql-connector-j-8.0.33.jar
+file.reference.mysql-connector-j-8.0.33.jar-1=C:\\Users\\Lenovo\\Downloads\\mysql-connector-j-8.0.33.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-8.0.33.jar}
+    ${file.reference.mysql-connector-j-8.0.33.jar}:\
+    ${file.reference.mysql-connector-j-8.0.33.jar-1}:\
+    ${file.reference.commons-beanutils-1.9.4.jar}:\
+    ${file.reference.commons-collections-3.2.1-1.0.0.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-digester3-3.2.jar}:\
+    ${file.reference.commons-javaflow-1209105.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.groovy-all-2.4.15.jar}:\
+    ${file.reference.itext-2.1.7.js2.jar}:\
+    ${file.reference.jasperreports-5.6.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
